Finished intro draft1 + Added a gitignore

--- a/cover/PhD_Submit_Title.tex
+++ b/cover/PhD_Submit_Title.tex
@@ -1,16 +1,17 @@
 %
 % Title page layout for submitted version.
-%
-\title{\thesistitle}
+%\vspace*{2mm} \includegraphics[width=15mm]{../logos/blue_lowe.pdf}
+\title{\includegraphics[width=35mm]{../logos/csm_Siegel_kleiner_f3fa80eafb.png} \thesistitle }
 \subtitle{\vspace*{4ex}
   \begin{otherlanguage}{ngerman}
-    Dissertation\\
+    \textbf{\Large Dissertation}\\
     zur\\
     Erlangung des Doktorgrades (Dr.\ rer.\ nat.)\\
     der\\
     Mathematisch-Naturwissenschaftlichen Fakultät\\
+    Fachgruppe Physik\\
     der\\
-    Rheinischen Friedrich-Wilhelms-Universität Bonn
+    Bergischen Universität Wuppertal
   \end{otherlanguage}
 }
 \author{%
@@ -21,13 +22,13 @@
 }
 \date{}
 \publishers{%
-  Bonn \thesisyear
+  Wuppertal \thesisyear
 }
 \lowertitleback{\normalsize
   \begin{otherlanguage}{ngerman}
     Angefertigt mit Genehmigung der 
     Mathematisch-Naturwissenschaftlichen Fakultät der
-    Rheinischen Friedrich-Wilhelms-Universität Bonn
+    Bergischen Universität Wuppertal
   \end{otherlanguage}
   
   \vspace*{10ex minus 4ex}
