--- a/thesis_skel/thesis_2009_skel.tex
+++ b/thesis_skel/thesis_2009_skel.tex
@@ -1,4 +1,4 @@
-\documentclass[Master,ngerman,UKenglish]{scrbook}
+\documentclass[PhD,Submit,ngerman,UKenglish]{scrbook}
 %------------------------------------------------------------------------------
 % This file contains a skeleton thesis for
 % a Physics or Astronomy Institute in the University of Bonn
@@ -200,11 +200,11 @@
 %------------------------------------------------------------------------------
 % Add your chapters here - don't forget to also add them to \includeonly above
 \include{thesis_intro}
-\include{thesis_dark_photon}
+\include{thesis_CRnEAS}
 \include{thesis_setup}
-\include{thesis_tracking}
-\include{thesis_alignment}
-\include{thesis_MC}
+\include{thesis_DGL}
+\include{thesis_DGH}
+\include{thesis_follow}
 \include{thesis_conclusion}
 % Uncomment the following command to get references per chapter.
 % Put it inside the file or change \include to \input if you do not want the references
