--- a/thesis_skel/thesis_acknowledge.tex
+++ b/thesis_skel/thesis_acknowledge.tex
@@ -2,6 +2,7 @@
 \chapter*{Acknowledgements}
 \label{sec:ack}
 %------------------------------------------------------------------------------
+( Rewrite ... )
 Even though this thesis has my name on the front a number of people were involved in shaping its final form both in person and in spirit.
 
 First and foremost I would like to thank my late grandfather Shanti Sarup Sehgal and grandmother Kusum Sehgal. Their constant motivation and belief in my abilities has and will always inspire me to achieve more.
