--- a/thesis_skel/thesis_appendix_A.tex
+++ b/thesis_skel/thesis_appendix_A.tex
@@ -1,5 +1,5 @@
 %------------------------------------------------------------------------------
-\chapter{Alignment Figures}
+\chapter{Testing hadronic models}
 \label{sec:app_1}
 %------------------------------------------------------------------------------
 This appendix includes the comparison of residuals obtained from alignment using the previously used method and Millepede. The reduced chi-square comparison plots for the two methods were shown earlier.
