--- a/thesis_skel/thesis_setup.tex
+++ b/thesis_skel/thesis_setup.tex
@@ -1,7 +1,7 @@
 % !TEX root = mythesis.tex
 
 %==============================================================================
-\chapter{NA64 Experimental Setup}
+\chapter{Pierre Auger Observatory}
 \label{sec:setup}
 %==============================================================================
 \begin{figure}[h!]
