--- a/thesis_skel/thesis_appendix_B.tex
+++ b/thesis_skel/thesis_appendix_B.tex
@@ -1,5 +1,5 @@
 %------------------------------------------------------------------------------
-\chapter{Modified Format}
+\chapter{Adapting DGH analysis to current Offline}
 \label{sec:app_2}
 %------------------------------------------------------------------------------
 \begin{figure}[h!]
