--- a/thesis_skel/thesis_intro.tex
+++ b/thesis_skel/thesis_intro.tex
@@ -6,11 +6,26 @@
 %==============================================================================
 \begin{figure}[h!]
 \centering
-\includegraphics[width=9cm]{thesis_figures/nj317989fig13.jpg}
+  \includegraphics[width=9cm]{thesis_figures/nj317989fig13.jpg}
 \caption{Positron fraction measured by PAMELA (red) along with a theoretical model (black)~\cite{Cholis_2009}}
 \label{fig:PAMELA}
 \end{figure}
-Questions like \textit{How? Why? When?} have always been part of a scientist's vernacular and describe the fundamental need for humans in general to know the inner workings of every process we can observe or predict. A similar need that began as a philosophical thought of Democritus, the first person to use the term atom, was further refined by John Dalton in his "Atomic Model" and was turned into a real observable quantity for the first time by JJ. Thompson~\cite{SMITH1997}, setting up the foundations for one of the pioneer fields of science we call particle physics. Particle physics has led us very close to the ultimate goal which is to fully link and explain all aspects of the physical universe. It tries to describe every known phenomena as fundamentally as possible by reducing all known processes to an interaction between elementary particles governed by four known forces. The current theory which classifies all known elementary particles and incorporates three of the four known fundamental forces is called the Standard Model (SM)~\cite{Book_SM}. The current formulation of the theory which is accredited to a large collaborative effort was arrived upon in the late 1970s~\cite{GLASHOW1961579,PhysRevLett.19.1264,10025429448}. The SM classifies elementary particles in two broad categories: Fermions and Bosons. Fermions are the building blocks of matter and are further divided into quarks and leptons. Bosons which are the force carriers or messenger particles are divided into Gauge ($\gamma, W^{+/-} ,Z ,g$) and Scalar ($H$) bosons and mediate the strong($g$), weak ($W^{+/-}/Z$), and electromagnetic ($\gamma$) forces. The gravitational force is not included in the SM but a hypothetical mediator gauge boson graviton ($G$) has been suggested. Since it's publication the SM has been rigorously tested for it's several predictions with various experiments~\cite{RevModPhys.71.S96} and the decisive observation of Higgs boson by ATLAS~\cite{Aad_2012} and CMS~\cite{Chatrchyan_2012} in 2010 established it as a widely accepted theory.
+The need to understand how something works or why something is?  is ingrained in every human. While attempting to find answers for these questions one either answers them conclusively or finds oneself asking additional questions stemming from the original. One such question which bothered physicists at the beginning of the 20th century and eventually led to the field of \textit{astro-particle physics} was of so-called "atmosphere electricity" or ionization of air. After the pioneering discoveries by Theodor Wulf~\cite{} and Victor Hess~\cite{} who found the increase of this ionization rate with altitude and theorized the origin of this radiation to be not Earth but something above our atmosphere, the name \textit{cosmic rays} was coined by Robert Millikan who believed these rays were originating from primary photons. This hypothesis was rejected by the measurements done by Jacob Clay~\cite{} in 1927 who observed a latitude dependence of the intensity of cosmic rays concluding this to be a deflection of the primary cosmic rays by the geomagnetic field of the Earth which indicated that these rays must be charged particles. After this came the efforts of Rossi~\cite{}, German group~\cite{} and Auger~\cite{} all independently discovering coincident signals in separated Geiger counters which they explained by the counters being struck by an extensive particle shower triggered by a primary cosmic ray. The phenomenon was named \textit{sciami} by Rossi, \textit{Luftshauer} by the German group and "Auger showers" by Auger and his collaborators. Auger went one step further by further estimating the primary energy of the cosmic ray via his superior setup giving rise to some current unknown mysteries of cosmic-ray physics, how are they created and where are they coming from. One of the known sources which is the Sun is too close to explain some other high energy CRs constantly hitting the Earth's atmosphere. Since then the field has only expanded with numerous experiments set up to characterize these cosmic rays. 
+
+The biggest of these experiments which looks for ultra-high energy cosmic rays(UHECRs) exists in 3000 km$^2$ patch of Argentinian pampa just outside of Malargue called the Pierre Auger Observatory~\cite{}. It uses a combination of 1660 Water Cherenkov tanks which form the Surface Detector of the observatory and observe the air shower particles arriving at the ground along with Fluorescence Detectors/Telescopes which can look at the development of shower as it travels through the atmosphere. Built primarily to answer the question of the cut-off of the cosmic ray spectrum also known as GZK(full form cutoff), the observatory has provided immense contributions not only in the field of CRs but also in the fields of Geophysics(elves), something here(edit...) and multi-messenger physics(neutrino+photon searches). Currently, the Surface detector is undergoing an upgrade which will add a scintillator and radio detector on top of the Water Cherenkov tanks further increasing the sensitivity of the Observatory especially to the composition of the cosmic rays.
+
+One of the challenges faced while looking for the sources of the cosmic-rays is the non-electrical neutrality of the incoming CRs. This means that CRs do not travel in straight lines from their sources and are affected by the magnetic fields and can also interact with the matter along the way\cite{}. Combined with the fact that the possible sources are light years away from us without knowing the magnetic fields of the Universe it is very hard to detect the sources of CRs. Ultra High Energy Neutrinos (UHE$\nu_s$) can help in this challenging search for the sources of CRs\cite{}. Being electrically neutral and having a very low interaction cross-section these particles can travel large distances unaffected by the intervening matter and magnetic fields. Several scenarios which are discussed later in \ref{sec:crneas} describe how the UHE$\nu_s$ can be produced by cosmic-rays and can tell us about their sources. Moreover, UHE$\nu_s$ are also interesting as they can also help constrain or explain different production and propagation scenarios for various sources helping us see known astrophysical and cosmogenic objects in a new way. The success of Icecube Neutrino Observatory, a neutrino observatory located in the South Pole,  in detecting the first astrophysical neutrinos and observations of the first steady source NGC 1068~\cite{} and transient source~\cite{} have reinvigorated the whole astro-particle field. The Pierre Auger Observatory has also contributed to the search for UHE$\nu_s$ by trying to detect the EASs that can be induced by them. With its stellar sensitivity at high energy, searches at Pierre Auger Observatory have provided some of the strictest upper limits on the diffuse flux of UHE neutrinos~\cite{}. This has already led to constrains on various hypothesized models explaining cosmogenic neutrino production.
+
+The last decade with the successes of LIGO/VIRGO~\cite{} in measuring the first Gravitational waves and IceCube in detecting the first astrophysical neutrinos has also rekindled a field which displays the true spirit of harmony in science and is called multi-messenger astronomy. The aim of the field is to establish a network that can coalesce all the  information available through various messengers via which we can see the Universe and maximise the resources and experiments available at Earth. This also allows us to understand the sources better since the observation or non-observation of different messengers can help constrain the mechanisms behind their functioning. The beginning of this field can be traced back to the observation of the first cosmic rays in conjunction with solar flares further cementing the important role Pierre Auger Observatory can play for this field. One of the most important success stories of this field is the August 2017 detection of the neutron star collision~\cite{} first by the LIGO/VIRGO detector since the Gravitational waves are the fastest messengers and then 1.7s later by the Fermi Gamma ray space telescope and INTEGRAL. 11 hours later already alerted by these two experiments the optical counterpart was detected by multiple telescopes like Las Campanas Observatory and the Hubble Space Telescope. The event was also further seen in Ultraviolet(Neil Gehrels Swift Observatory), X-ray(Chandra X-ray Observatory) and radio(Karl G. Jansky Very Large Array). The non observation of neutrinos by both the IceCube and the Pierre Auger Observatory helped reach the important conclusion about the orientation of the jets which is hypothesized to be off-axis i.e. not pointing directly towards the Earth. Since neutrinos and Gravitational waves are the fastest of the messengers to reach the Earth, alerts issued by IceCube and LIGO/VIRGO are regularly used to follow up the events with other experiments. Subsequent observations of the blazar TXS 0506+056~\cite{} with IceCube, FERMI-LAT and MAGIC and the observations of neutrinos from the plane of the Milky Way galaxy~\cite{} have helped establish the continued importance of multi-messenger astronomy.
+
+In this thesis performance of one of the upgrades of the Pierre Auger Observatory done in 2013 is evaluated in the context of neutrino search. This upgrade consisted of introducing new triggers called Time over Threshold deconvulated(ToTd) and Multiple of Positive Steps(MoPS) in 2013 to reduce the muonic background and effectively decrease the energy threshold for the array. Such triggers can be particularly important in the context of neutrino searches between $60^\circ$-$75^\circ$ since they help in getting a better signal background separation. The effect of these triggers for both the diffused and point-source searches is investigated. The thesis also focuses on maximising the previously done neutrino searches in the zenith region $60^\circ$-$90^\circ$ by investigating and updating the analysis presented in~\cite{},~\cite{}.
+
+The thesis is structured as follows, The next chapter~\ref{} gives the theoretical background for UHE cosmic rays and UHE neutrinos and other important messengers with regard to the Pierre Auger Observatory. It also aims to discuss the various theoretical scenarios involved in their production and propagation. The chapter also aims to summarize the important recent results for these messengers and the various interesting open questions for them. The next chapter~\ref{} describes the phenomenon of Extensive Air showers which is used to indirectly detect both the cosmic rays and neutrinos at the Pierre Auger Observatory. To continue with understanding the detection in a more experimental context the next chapter~\ref{} gives a detailed description of the Pierre Auger Observatory. The objective of the chapter is to try to give an exhaustive description of all the tools at the Pierre Auger Observatory necessary to detect neutrinos with a particular focus on the Surface Detector which is of primary concern for the analysis presented in this thesis. A small section is also dedicated to the recently completed AugerPrime upgrade and the exciting potential it offers especially for multi-messenger searches. 
+
+The second part of the thesis is dedicated to the neutrino search in the zenith angular region $60^\circ$-$90^\circ$. This part begins with the chapter~\ref{} that gives a description of the neutrino search in the angular range $60^\circ$-$75^\circ$ which is also the primary focus region for this thesis. The chapter is dedicated to provide a complete description of the choices made for the analysis with the proper reasoning. It reports the areas of potential improvements and also communicates the observed improvements to the neutrino search with the new triggers. A new ~\textit{blind} search is performed to look for neutrinos in the data recorded at the Pierre Auger Observatory. The results are summarised at the end of this chapter and due to the non-observance of any neutrino like events, the corresponding limits to the neutrino flux are presented. The next chapter~\ref{} intends to do the same for the zenith angular range $60^\circ$-$75^\circ$. The analysis is split into these two angular regions because of a difference expected neutrino signature in the detector and to maximise the probability of detecting neutrinos at the Observatory. The Observatory can also detect up-going showers in the zenith angular region $90^\circ$-$95^\circ$ with the Surface Detector and $90^\circ$-$180^\circ$ (???) with the Fluorescence Detector, but these searches are not performed in this thesis and only their final results are included to for comparison and to provide a holistic feel for the neutrino search at Pierre Auger Observatory.
+
+The last part of this thesis presents an example of a neutrino follow-up analysis for the source (blabla) in chapter~\ref{}. Due to the non observance of any neutrinos in the data at the Pierre Auger Observatory an upper limit set by this analysis is also provided for interesting point source neutrino candidates. All the important results are the finally summarised in chapter~\ref{} and a short outlook of the future directions for the analysis and the neutrino search at the Pierre Auger Observatory is put forward. The dissertation is completed by three appendices. The first describing the independent work done to compare the various hadronic interaction models for neutrino simulations and the second contains a technical overview of the changes made to implement the $60^\circ$-$75^\circ$ neutrino search within Offline, the software framework of the Pierre Auger Observatory. Maybe will also add Fisher information later in the Appendix.
+
 
 \begin{figure}[t!]
 \centering
@@ -29,9 +44,7 @@ Questions like \textit{How? Why? When?} have always been part of a scientist's v
     \label{fig:neutrino_mass}
   \end{minipage}
 \end{figure}
-Although the SM describes most of the known processes, there are still several phenomena which remain unexplained leading us to look for modifications or alternate theories that can supplement the SM. The observations of PAMELA~\cite{Cholis_2009} which present a clear matter-antimatter asymmetry find no clear explanations in the SM. The discovery of neutrino oscillations~\cite{Fukuda_1998} which leads to a non-zero neutrino mass~\cite{Aker:2019uuj} is still not fully incorporated in the SM even with the proposed modifications~\cite{Mohapatra_2007}. Further challenges to the SM arrive from cosmological observations such as the accelerated expansion~\cite{RevModPhys.84.1151}, the discrepancies in the calculated mass of the Bullet cluster~\cite{Clowe_2004} and the Cosmic Microwave Background measurements (CMB) by WMAP/PLANCK~\cite{Bennett_2013,Aghanim:2018eyx}, which have led to a drastic change in our understanding of the composition of the known universe, one which consists of only 4.9\% ordinary matter, i.e the matter described by the SM. The other 95.1\%, distributed as 26.8\% dark matter and 68.3\% dark energy, finds no explanation in the SM. The theoretical developments or modifications needed to rectify the shortcomings of the SM are referred to as Physics Beyond the Standard Model (BSM).
 
-To further expand our knowledge of the universe, especially the dark matter puzzle, numerous candidates have been proposed with their observations dependent on interactions with SM particles. Among them Weakly Interacting Massive Particles (WIMPs)~\cite{Jungman_1996} and axions~\cite{raffelt1995axions} are some of the more popular search prospects. Another candidate, which is the focus of this thesis, is the Dark Photon $A'$ also known as hidden, heavy, para-, or secluded photon. As the name suggests the Dark Photon is hypothesized to be a photon-like force carrier for dark matter. The theory and motivation behind $A'$ and its interaction with the SM will be discussed in more detail in chapter(\ref{sec:darkp}).
 
 \begin{figure}[h!]
 \centering
@@ -40,10 +53,7 @@ To further expand our knowledge of the universe, especially the dark matter puzz
 \label{fig:ATOMKI}
 \end{figure}
 
-The experiments which look for these speculated particles can be broadly divided into two categories "Direct" and "Indirect" detection, based on which part of the decay chain they are tuned to observe. Direct detection experiments try to measure the low-energy recoil of atomic nuclei when they are hit by Dark Matter (DM) particles passing through the Earth. Some examples of these laboratories which are usually situated miles underground to observe these rare processes are Xenon1T~\cite{PhysRevLett.121.111302} and LUX~\cite{Akerib_2017}, both of which are looking for WIMPs. On the other hand Indirect detection experiments try to look for products of decay or annihilation of dark matter particles. In this sector the scale of viable areas to look for is literally astronomical. The signature of such events can be in myriad forms such as neutrinos, high-energy gamma rays or even cosmic rays to name a few. Some experiments looking for corresponding signals are IceCube, ANTARES (both neutrinos)~\cite{IceCube2018MultimessengerOO,Adri_n_Mart_nez_2016}, Fermi Gamma-ray Space Telescope (gamma-rays)~\cite{Hooper_2011} and  Alpha Magnetic Spectrometer (cosmic-rays)~\cite{PhysRevLett.118.191101}.
-Indirect searches also involve accelerator experiments~\cite{essig2013dark} where dark matter particles can be produced and detected as either missing energy (invisible) or an excess of final products (visible). One of such experiments looking for the Dark Photon $A'$ in a beam dump experiment is NA64~\cite{andreas2013proposal}, which has been consistently trying to estimate the theorized properties of $A'$. It has also played a role in constraining the coupling and mass of DM particle $\chi$ and the hypothesized 16.7 MeV boson (X17) first observed by the ATOMKI experiment~\cite{Krasznahorkay_2016,krasznahorkay2019new}.
 
-This thesis presents the work done to implement a data analysis chain for the NA64 experiment in COmpass Reconstruction AnaLysis software package(CORAL)~\cite{Collaboration2007TheCE}. The work involves setting up an alignment chain for different experimental setups of NA64 incorporating the inbuilt Millepede minimization tool of CORAL. The alignment is further verified by comparing it to the standalone tool described in~\cite{nabeel:2018}. It further involves studying and documenting the already implemented Monte Carlo (MC) simulation for NA64 and translating the output to a format compatible with CORAL for reconstruction. Finally the obtained CORAL MC reconstruction is checked with the published studies~\cite{PhysRevD.97.072002}.
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "mythesis"
