Everything until CR spectrum

--- a/thesis_skel/thesis_CRnEAS.tex
+++ b/thesis_skel/thesis_CRnEAS.tex
@@ -4,11 +4,115 @@
 \chapter{Ultra High Energy Cosmic Rays and Neutrinos}
 \label{sec:crneas}
 %==============================================================================
-This section describes the theory and motivation for a new U(1) gauge boson that couples to the SM via kinetic mixing with the photon. The first indication of the existence of such a light boson was arrived at as an attempt to explain the astrophysical observations especially from PAMELA and WMAP/PLANCK. The explanation for the observed results was dark matter annihilation into $e^+e^-$. The PAMELA results required a large cross-section into leptons and a low cross-section into hadrons for the theorized particle. Taking this observation and building a model~\cite{Arkani_Hamed_2009} for this hypothesized particle already helped negate a few SM candidates such as Z, W and Higgs bosons (all (three) have low cross-section into leptons) and thermal WIMP (low cross-section at small lorentz boosts)~\cite{Arkani_Hamed_2009}, which is a competing dark matter prospect. Occurrence of a light vector boson that annihilates to leptons might explain these observations. Such a boson $A'$ was added to the SM in the simplest way by introducing a new spontaneously broken U(1) gauge field which couples via kinetic mixing with the ordinary photon, first discussed in \cite{HOLDOM1986196,GALISON1984279}. The Lagrangian is modified in the following way:
+
+\section{Ultra High Energy Cosmic Rays}
+\subsection{History}
+As already mentioned in the introduction cosmic rays have been a source of investigation for more than a century now. Even before the balloon flight by Victor Hess it was Henry Becquerel, the discoverer of radioactivity who believed that the \textit{atmospheric electricity}(ionization of air) was due to the radioactive substances present on Earth. In such a scenario the ionization rate should decrease the higher up you go in the atmosphere. The first measurements disproving this theory were performed by Theodor Wulf in 1909 with his own developed electrometer. His measurements published in the \textit{Physikalische Zeitschrift} indicated a higher level of radiation at the top of the Eiffel Tower as compared to its base. Unfortunately the measurements were not widely accepted, and it would take three years till Victor Hess via his several balloon flights provided irrefutable measurements corroborating Wulf's observations.
+
+Between 1911-1912 Victor Hess performed nine(2 in 1911 and 7 in 1912) balloon flights going as high as 5350m a.s.l to measure the dependence of ionization rate to altitude. He carried with him three Wulf electrometers, two tuned for $\gamma$ rays and the third tuned for $\beta$ rays~\cite{}(1808.02927) which along with $\alpha$ were the only three known radioactive decays. His measurements published in the Proceedings of the Viennese Academy of Sciences~\cite{} showed that the radiation level decreased slightly up to a certain altitude (~1 km) but after this height the radiation increased significantly and at the highest flown altitudes reached levels about twice in comparison to the ones at sea level. Some of his measurements were done during the night and one during a partial solar eclipse which further made him rule out Sun as a source of this radiation. With further confirmations via the measurements by Werner Kolhörster in 1914 and Robert Millikan, in 1925, Victor Hess was awarded the Nobel Prize in Physics in 1936. 
+
+Cosmic rays were still presumed to be gamma rays. This supposition was quickly negated by the efforts of Jacob Clay who via his measurements of the cosmic ray intensity at different latitudes by while sailing from Java to the Netherlands in 1927~\cite{} showed that the geomagnetic field had a significant effect on the intensity. Further observations of the \textit{East-West} effect, the directional dependent intensity due to the charge of the primary cosmic rays, predicted by Bruno Rossi~\cite{}, by various experiments~\cite{}~\cite{} concluded that the intensity was greater from the west proving that cosmic ray primaries have a positive charge.
+
+Today we use Cosmic Rays (CRs) to describe the highly energetic charged particles/nuclei travelling at very high speeds through space. The Earth is constantly bombarded by CRs some originating from the Sun but most of them from outside our Solar System. In more than 100 years since Victor Hess's balloon flight we have gathered a lot more information and have achieved a better understanding of CRs. We have detected CRs to energies ~$10^{20}$eV which is an impressive feat since at these energies the expected flux drops below one particle/$km^2$. We know a lot more about the composition of the CRs and have also proposed models explaining their origin and their journey to Earth. CRs continue to be a source of fascination. Some of the achievements are summarised below along with some unanswered questions about CRs. 
+
+\subsection{Origin}
+
+To understand the sources for cosmic rays one needs to understand the mechanisms that could impart huge amounts of energies to the tiny particles that actually reach the Earth. We already know that the low energy cosmic rays which reach our Earth are predominantly coming from the Sun. The evidence for this comes from the observation of an increase in these with a coincidence to violent activity of the sun. Most of the CRs and UHECRs do not exhibit this temporal coincidence and are thought to have been originated in our Galaxy or beyond respectively. There are two different mechanisms which could explain how the cosmic rays particles are accelerated to such high energies over large distances: \textit{bottom-up} and \textit{top-down}. The \textit{top-down} approach assumes that the UHECRs are produced due to the decay or annihilation of extremely massive or exotic particles.
+Both of these mechanisms have been investigated with various experiments including the Pierre Auger Observatory. With the current observations the top-down models face significant challenges. The extremely high energies required for the annihilation of the hypothesised exotic particles and the lack of evidence for their existence makes it very difficult to both verify and rule out the top-down mechanism. The continued improvement in understanding of astro-particle physics and the early universe makes the study of UHECRs an exciting and active area for research with the mystery of their origin and propagation still looking for a solution. 
+
+\subsubsection{Bottom-up scenario}
+
+There are many proposed ways in which CRs could get accelerated by astrophysical sources. One of the most widely accepted explanation which can explain most of the observed CRs which originate from our Galaxy is the diffusive shock acceleration also known as Fermi acceleration. Qualitatively one can explain Fermi acceleration as follows: When a massive star reaches the end of its life cycle it can undergo a supernova explosion. During this the star core collapses and an intense shockwave propagates outwards towards the star's outer layers. As the shock wave progresses and moves through the interstellar medium(ISM) it sweeps up and compresses the surrounding gas and magnetic fields creating a region of very high pressure and magnetic turbulence known as the shock front. The charged particles can get trapped in such a shock front and repeatedly cross over this region of magnetic turbulence experiencing magnetic irregularities and constantly changing direction in a collission-less way thus experiencing electric fields each time they cross which accelerate them to higher energies. An illustration is shown in fig. The shock front is turbulent, and particles can cross it multiple times, gaining energy at each passage. Eventually some particles can acquire enough energy to escape the shock region and travel the required distances to reach the Earth. Such an explanation can explain the CRs originating in our Galaxy and point towards supernovae and its remnants as potential sources but to explain the UHECRs(>1019eV) we need other sources and mechanisms. The energy that can be produced by the accelerator is limited by the gyroradius of the accelerator. This has been illustrated by Hillas~\cite{} where he illustrated the potential sources of CRs on a plot of magnetic field strength vs size. A modified version of his original plot with inclusion of modern sources is shown in fig.~\ref{fig:Bullet2}.   
+
+Other accelerating mechanisms are as follows:
+
+\todo{citations needed}
+
+1. Supernova Remnants:  Interactions of CRs with the magnetic fields within the remnants could lead to further acceleration.
+
+2. Active Galactic Nuclei (AGNs): These are regions in the center of galaxies that are capable of producing highly energetic particles. The source of this capability is theorised to be supermassive black holes. The extreme conditions near the black holes such as strong magnetic fields and high-energy jets could accelerate UHECRs.
+
+3. Magnetar Outburts: Magnetars are neutron stars having a magnetic field ~1000 times that of a normal neutron star. They are known to produced magnetically powered bursts which could potentially accelerate particles to UHECR level energies.
+
+4. Pulsar Wind Nebulae: Rapidly rotating neutron stars, also known as Pulsars emit beams of electro-magnetic radiation. Such beams can collide with ISM creating a pulsar wind nubulae, a region similar to a shock wave front and can lead to prodution of UHECRs.
+
+5. Galaxy Clusters: These are regions of massive galaxy populations bound together by gravity. These highly dense structures can accelerate particles either by themselves or via the shock waves associated with a potential merging of different galaxy clusters. 
+
+6. Relativistic shocks: Other type of astrophysical shocks such as those occurring in gamma-ray bursts or colliding stellar winds could also create scenarios which could accelerate particles to UHECR level energies.
+
+The validity of all such hypothesised mechanisms can be checked by corroborating their spectral index predictions with that observed by the experiments. 
+
+\subsubsection{Top-down scenario}
+This is an alternative approach to explain UHECRs. The main idea behind these models is that the UHECRs are produced due to the decay or interaction of hypothetical, supermassive, or exotic particles that were produced in the early universe Some of the proposed hypothesis are mentioned below:
+
+\todo{Citations needed ...}
+
+1. Supermassive Dark Matter Particles: This is an extension of a concept that was first proposed to explain dark matter.In this hypothesis it is assumed that dark matter is composed of long-lived supermassive particles. If such particles exist they could potentially decay and produce UHECRs.
+
+2. Cosmic Strings: These are one-dimensional topological defects which could have formed during phase transitions in the early Universe. The decay of these massive strings could also lead to production of UHECRs.
+
+3. Other Topological effects: These include defects like monopoles or domain walls which could also produce exotic particles which can further decay into UHECRs. 
+
+There are other scenarios such as breakdown of Lorentz invariance which attack the problem of UHECRs not by suggesting a new mechanism for their production but their propagation which can also have a major effect to the observations of CRs and UHECRs we observe at Earth. Some of these models can be constrained by again looking at the flux of the UHECRs. There are also experiments which try to directly look for these exotic particles~\cite{}. So far, no evidence has been found to support the existence of these particles. 
+
+\subsection{Propagation}
+
+However, production is just one part in the life of a CR/UHECRs. To get detected at Earth the CRs and UHECRs have to travel large distances through ISM during which they can suffer various loses which ultimately affects the spectrum we see on Earth. Some main processes include losses by ionization due to collision with ISM, Coulomb Scattering which can cause random changes to the direction, Synchrotron Radiation which can lead to emission of high energy photons and, consequently, energy loss for the cosmic ray particle and through collisions with high-energy photons from radiation fields leading to breakage of CR nuclei also known as Photodisintegration. Other propagation effects such as Bremsstrahlung and Inverse Compton Scattering due to interactions with the cosmic microwave background radiation(CMB)  are the reasons high energy cosmic ray electrons cannot propagate large distances. Few other mechanisms include Adiabatic Energy Loss which can occur when a CR particle traverses through regions of high pressure or magnetic field strength to regions of lower pressure and magnetic field strength leading to a decrease in its velocity, Scattering due to going through magnetic turbulent areas or even an escape of UHECRs from our Galaxy can all affect the spectrum of CRs and UHECRs we see at Earth. One of the critical phenomenon to understand the cosmic ray propagation and to realize a theoretical limit to the energy of UHECRs is the Greisen-Zatsepin-Kuzmin (GZK) cutoff. This is discussed in more details below.
+
+\paragraph{GZK Limit} 
+The GZK cutoff was first proposed by Kenneth Greisen, an American physicist in 1966 in a paper titled "End to the Cosmic-Ray Spectrum?"~\cite{}. He discussed the potential energy loss of high-energy cosmic rays due to interactions with the CMB. He calculated a threshold energy above which cosmic rays in his case protons would lose energy through interactions with CMB. In the same year, two Soviet physicists, Georgiy Zatsepin and Vadim Kuzmin, arrived at a similar prediction. Their calculations published in their paper "Upper Limit of the Spectrum of Cosmic Rays"~\cite{} were consistent with Griesen's work and reinforced the concept of GZK cutoff.  
+The energy cutoff calculated is about 5 x $10^{19}$ electronvolts(eV) or about 8 joules. The dominant mechanisms via which the proton can interact with the photons of the CMB are given below. 
+
+\begin{equation}\label{eq:GZK}
+  \begin{split}
+    p + \gamma_{CMB} &\longrightarrow \Delta^+(1232 ) \longrightarrow n+\pi^+ \\ 
+                     &\longrightarrow \Delta^+(1232 ) \longrightarrow p+\pi^0
+  \end{split} 
+  \begin{split}
+    A + \gamma_{CMB} &\longrightarrow A-1 + \pi^+ + X \\ 
+                     &\longrightarrow A-1 + \pi^0 + X
+  \end{split} 
+\end{equation}
+These processes are also called "Photopion Production". The thresholds for these reactions are of the order of ~a few hundred MeV for protons and ~GeV per nucleon for other nuclei. The predicted cutoff for protons is 50 EeV whereas for heavy nuclei it can range from about 80 EeV to several hundered EeV depending on the mass of the incident nucleus. The mean free path which represents the average distance a cosmic ray particle can travel before undergoing a significant interaction is ~6Mpc for protons. This leads to the outcome that if a UHECR proton with energy above the GZK cutoff travels over a distance larger than 50Mpc then such a proton will suffer catastrophic loses and will never be observed on Earth. However, this consequence doesn't hold for heavy nuclei since for them Photopion production is not the dominant process via which they can lose energy. For ultra-high-energy cosmic rays (UHECRs) composed of heavy nuclei (e.g., iron, uranium), the dominant energy loss process during their propagation through the universe is photodisintegration. It can be described as:
+\begin{equation}\label{eq:Pdisinteg}
+    A + \gamma_{CMB} \longrightarrow A-1 + p + n  
+\end{equation}
+The mean free path is still of the order of ~10Mpc.
+Even though, Pierre Auger Observatory observes a suppression in the cosmic ray spectrum above the GZK cutoff~\cite{}, it does not claim it to be just due to GZK limit. It has also observed cosmic rays above the GZK cutoff. This issue along with its implications is discussed later in ~\ref{}. One of the other consequences arising from the interaction with the CMB is interaction of high energy photons(gamma rays) to produce electron-positron pairs, $\gamma_{UHECR} + \gamma_{CMB} \longrightarrow e^+ + e^- $. This is an important consequence which alters both the expected UHECR spectrum and the CR spectrum at Earth and also just leaved UHE$\nu$ as one of the only known cosmic ray particles which can point back directly to their sources.
+
+The production of UHE$\nu$ arising from the pions produced during the Photopion interaction are discussed later. 
+
+\subsection{Latest results}
+The study of CRs to constrain their properties and the relevant sources requires measurements on Earth. The measurements which provide valuable information are the energy spectrum or flux observed at Earth, composition of the primary CRs arriving at Earth, their arrival direction and other relevant observations such as measurement of other messengers such as high energy photons and neutrons. These measurements and their implications are discussed in more detail below. The UHE$\nu$, relevant for this thesis are discussed in a separate section. 
+
+\subsubsection*{Cosmic Ray spectrum}
+The cosmic ray spectrum measured by several experiments on Earth is summarised in figure.~\ref{}. Extending in energy from a few ~100 MeV(solar CRs) it spans about 12 orders of magnitude up till the highest observed CRs ~$10^{20}$eV. The flux decreases with increasing energy and follows a varying power law description:
+\begin{equation}\label{eq:Pdisinteg}
+  \frac{dN}{dE} \propto E^{-\gamma}   
+\end{equation}
+where $\gamma$ is the spectral index. The spectral index varies between 2.7 to 3.3 as measurements are made for higher energies. This signifies a decrease in the observed flux as the energy increases. The flux falls from $\sim 1m^{-2} s^{-1}$ at $10^{11}$eV to $\sim 1m^{-2} yr^{-1}$ at $10^{16}$eV to about $\sim 1km^{-2} yr^{-1}$ at $10^{19}$eV. Such a steep fall also poses challenges for the experimental design and the corresponding size. This also affects the detection mechanisms employed to measure this spectrum, due to the very low flux expected at high energies, the measurements of the direct primaries becomes nearly impossible and an indirect detection using the property of the cosmic ray to trigger an air shower in our atmosphere is employed. This phenomenon and how it is used to meausre CRs is discussed in the next chapter~\ref{}.
+
+To better deduce the features in the cosmic ray spectrum one can scale the flux in the fig~\ref{} by energy. The corresponding figure is shown in Fig.~\ref{}. Below $10^{13}$eV CRs from the Sun dominate the spectrum. The galactic or extragalactic CRs of these energies cannot enter our solar system because of a variety of reasons. These include a combination of the Heliosphere, Termination Shock and solar modulation which block the low energy CRs. The Heliosphere which is a region influenced by the Sun's magnetic field and solar wind acts as a protective bubble around the solar system. Beyond the Heliosphere, the solar wind interacts with the ISM creating a region of termination shock which can cause scattering and deflection for incoming low energy CRs. Additionally, the solar activity cycle can cause changes to the Heliosphere which in turn also affects the incoming CRs. Beyond a few GeVs the Sun as a source of CRs drops of due to reaching its maximum acceleration. Between $10^{13}$eV and $10^{18}$eV the spectrum is dominated by CRs of galactic origin. This has been verified by comparing the spectral indices of the proposed acceleration mechanisms with the measured spectrum as mentioned before. A second proof also comes from the composition of the CRs observed in these energies but this is discussed later. \textit{Supernovae} and \textit{supernovae remnants} remain the most promising sources which could explain their origin. The spectral index $\gamma \sim$ 2.7 gives a good description of this region. Around ~$5 \times 10^{15}$ one observes a steepening of the spectrum known as the \textit{knee}. At this point the spectral index $\gamma$ changes from 2.7 to 3.1. This is attributed to the galactic accelerators reaching their maximum potential for accelerating protons. Above the knee the sources are expected to reach their maximum potential for other heavier particles until galactic sources cannot accelerate CRs any further. This point is thought to be the origin of the second knee at ~$10^{17}$eV. At this point the $\gamma$ changes from 3.1 to 3.3. This is theorised to be a transition region in which the spectrum is believed to change from one of galactic origin to extragalactic origin. This region ends at about ~$10^{18}$eV whereon the spectrum hardens noticeably to a $\gamma$ ~2.6, originating what is referred to as the \textit{ankle}. Further, with increasing energy the spectrum again steepens to $\gamma$ ~5.1 reaching an eventual cutoff. The suppression of flux at these energies and the cutoff is still not properly understood yet and could be due to the following possibilities.
+
+1. GZK Limit: One of the most prevalent ideas behind the suppression and the cutoff is the GZK mechanism which was discussed above. Due to the observations of CRs above the cutoff of ~$10^{19}$eV by the Pierre Auger Observatory and a non-observance of expected composition(non proton primaries) and neutrino flux(GZK pion decay), GZK as the only reason for the observed cutoff in the spectrum is currently disfavored. However, tensions between the composition measurements of the Pierre Auger Observatory and the Telescope Array(TA), second-largest CR observatory, makes this topic still a subject of debate.
+
+2. Maximum Rigidity: In this scenario the cutoff is due to the sources of the extragalactic CRs reaching their maximum potential for acceleration for different particles i.e maximum rigidity. Such a scenario is already observed in the spectrum for Galactic sources(\textit{knee}). An indirect proof of this mechanism can come from the observed composition from the \textit{ankle} region to the cutoff. If the composition shifts from lighter to heavier nuclei then this would be a proof of a cutoff at the potential extragalactic sources. 
+
+3. Photo-disintegration: This effect was also discussed before in sec.~\ref{}. However, for such a scenario the cutoff would appear in steps depending on the mass of the nuclei. 
+
+It is likely that the cutoff and the suppression is not just because of one of the above-mentioned scenarios but is due to a combination of all the three. In theory, GZK and Photo-disintegration could explain the observed spectrum but the non-observance of GZK neutrinos and the composition measurements gather otherwise. It also shows that even though the CR spectrum gives a very nice overview other crucial measurements of composition and multi-messengers play an equally important ally to the spectrum measurements for constraining the origin and propogation of CRs.
+
+\subsubsection*{Cosmic Ray composition}
+
+
+
+
 \begin{equation}\label{eq:Lagrangian}
   {\cal L} =  L_{SM} - \frac{1}{4} F'_{\mu\nu}F^{\mu\nu} + \frac{\epsilon}{2} F'_{\mu\nu}F^{\mu\nu} + \frac{m^2_{A'}}{2} A'_{\mu}A^{\mu} + i \overline{\chi} \gamma^{\mu} \partial_{\mu} \chi - m_{\chi} \overline{\chi} \chi - e_D \overline{\chi} \gamma^{\mu} A'_{\mu} \chi
 \end{equation}
-here $A'_{\mu}$ is the field associated with the dark photon, $\frac{\epsilon}{2} F'_{\mu\nu}F^{\mu\nu}$ is the kinetic mixing term between the dark photon and SM photon with $\epsilon$ describing the mixing strength. $\chi$ is treated as a placeholder for dark matter fermions which couple to $A'$ via the coupling constant $e_D$ also known as the dark portal coupling constant, $m_{A'}$ and $m_{\chi}$ are the masses of the $A'$ and the dark matter fermion respectively. The $A'$ can aquire its mass via the Higgs~\cite{PhysRevLett.13.508} or the Stueckelberg~\cite{Kors:2005uz} mechanism.
+here $A'_{\mu}$ is the field associated with the dark photon, $\frac{\epsilon}{2} F'_{\mu\nu}F^{\mu\nu}$ is the kinetic mixing term between the dark photon and SM photon with $\epsilon$ describing the mixing strength. $\chi$ is treated as a placeholder for dark matter fermions which couple to $A'$ via the coupling constant $e_D$ also known as the dark portal coupling constant, $m_{A'}$ and $m_{\chi}$ are the masses of the $A'$ and the dark matter fermion respectively. The $A'$ can acquire its mass via the Higgs~\cite{PhysRevLett.13.508} or the Stueckelberg~\cite{Kors:2005uz} mechanism.
+
+
 
 The mixing between the SM photon and $A'$ offers a possible channel for its production such as the high energy electron scattering off a nuclei $e^-Z\rightarrow e^- Z A'$. The production cross-section of $A'$ for this reaction was calculated using improved Weizsäker-Williams (IWW) approximation and the exact tree-level (ETL) calculations by Liu et al. \cite{Liu:2017htz} and Gninenko et al. \cite{Gninenko:2017yus}. This calculation is extremely important since it gives us a theoretical prediction for the number of $A's$ that could be produced for this channel and is also useful for the implementation of a MC simulation for the reaction.
 
